src/Uno.UI.Runtime.Skia.MacOS/UnoNativeMac/UnoNativeMac/UNOWebView.h

NS_ASSUME_NONNULL_BEGIN

typedef void (*uno_webview_javascript_fn_ptr)(NSInteger /* handle */, const char* _Nullable /* result */, const char* _Nullable /* error */);